Trivial fix - changed new Character('_') into Character.valueOf('_')
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/trunk@832549 13f79535-47bb-0310-9956-ffa450edef68